--- a/README.org
+++ b/README.org
@@ -3,3 +3,5 @@
 Currently undergoing redevelopment.
 
 TODO: currently quite slow... why?
+
+TODO rename to tjr_net - persistence is not handled currently
